Finished Sample Page and a few other additional pages. Began work on the help alerts.

--- a/pages/upcomingcourses.html
+++ b/pages/upcomingcourses.html
@@ -105,45 +105,19 @@
           <div class="completion-Bar"></div>
           <h4 class="">Core Program Courses:</h4>
           <!-- Use of Possible input tag here. Come back for later review -->
-          <div class="option-One">
+          <div class="selectable-One">
             <h4 class="">CSET 155</h4>
             <h3 class="">Database Design</h3>
           </div>
 
-          <div class="option-Two">
+          <div class="selectable-Two">
             <h4 class="">CSET 160</h4>
             <h3 class="">Web Development II</h3>
           </div>
 
-          <div class="option-Three">
+          <div class="selectable-Three">
             <h4 class="">CSET 170</h4>
             <h3 class="">Security &amp; Proffesional Ethics</h3>
-          </div>
-
-        <section class="">
-          <h4 class="">Course Registration Completion:</h4>
-          <div class="">50%</div>
-          <div class="completion-Bar"></div>
-          <h4 class="">Core Program Courses:</h4>
-          <!-- Use of Possible input tag here. Come back for later review -->
-          <div class="option-One">
-            <h4 class="">CSET 155</h4>
-            <h3 class="">Database Design</h3>
-          </div>
-
-          <div class="option-Two">
-            <h4 class="">CSET 160</h4>
-            <h3 class="">Web Development II</h3>
-          </div>
-
-          <div class="option-Three">
-            <h4 class="">CSET 170</h4>
-            <h3 class="">Security &amp; Proffesional Ethics</h3>
-          </div>
-
-          <div class="option-Four">
-            <h4 class="">CSET 180</h4>
-            <h3 class="">Software Project II</h3>
           </div>
 
           <div class="get-Help-Button">
@@ -151,15 +125,76 @@
           </div>
         </section>
 
+        <section class="">
+          <h4 class="">Course Registration Completion:</h4>
+          <div class="">60%</div>
+          <div class="completion-Bar"></div>
+          <h4 class="">General Education</h4>
+          <!-- Use of Possible input tag here. Come back for later review -->
+          <h4 class="">Computer Information Systems</h4>
+          <div class="line"></div>
+          <div class="option-One">
+            <h4 class="">CIS 105</h4>
+            <h3 class="">Drawing with AutoCAD</h3>
+          </div>
+
+          <div class="option-Two">
+            <h4 class="">CIS 111</h4>
+            <h3 class="">Introduction to Computer Applications</h3>
+          </div>
+
+          <div class="option-Three">
+            <h4 class="">CIS 211</h4>
+            <h3 class="">Microsoft Excel</h3>
+          </div>
+
+        </section>
+
+        <section class="">
+          <h4 class="">Course Registration Completion:</h4>
+          <div class="">60%</div>
+          <div class="completion-Bar"></div>
+          <h4 class="">General Education</h4>
+          <!-- Use of Possible input tag here. Come back for later review -->
+          <h4 class="">English</h4>
+          <div class="line"></div>
+          <div class="option-One">
+            <h4 class="">ENG 106</h4>
+            <h3 class="">English Composition</h3>
+          </div>
+
+          <div class="option-Two">
+            <h4 class="">ENG 116</h4>
+            <h3 class="">Short Story and Poetry</h3>
+          </div>
+
+          <div class="option-Three">
+            <h4 class="">ENG 216</h4>
+            <h3 class="">Technical Report Writing</h3>
+          </div>
+
+          <div class="option-Four">
+            <h4 class="">ENG 221</h4>
+            <h3 class="">Public Speaking</h3>
+          </div>
+
+          <div class="option-Five">
+            <h4 class="">ENG 225</h4>
+            <h3 class="">Short Contemporary Novel</h3>
+          </div>
+
       </div>
       <!-- Another button tag may be used here. Return later to make a button and mate with a script if needed. -->
+      <div class="register-Button">
+        <p>REGISTER »</p>
+      </div>
 
       <div class="next-Button">
         <p>NEXT »</p>
       </div>
     </section>
 
-    <section class="">
+    <section class="pop-Up-2d">
 
 
     </section>
