--- a/pages/upcomingcourses.html
+++ b/pages/upcomingcourses.html
@@ -195,8 +195,14 @@
     </section>
 
     <section class="pop-Up-2d">
-
-
+      <div class="popup-Outline">
+        <h4 class="">Course Registration Help</h4>
+        <h4 class="">Error: Other Issue</h4>
+        <p>Thank you! Your message has been submitted &amp; we will be in touch shortly.</p>
+        <div class="thanks-Button">
+          <p>THANKS!</p>
+        </div>
+      </div>
     </section>
     <script src="javascript/counter.js" type="text/javascript"></script>
   </body>
