Get help 2a finished.

--- a/pages/upcomingcourses.html
+++ b/pages/upcomingcourses.html
@@ -194,6 +194,19 @@
       </div>
     </section>
 
+    <section class="pop-Up-2a">
+      <div class="popup-Outline">
+        <h4 class="">Course Registration Help</h4>
+        <h4 class="">Current Program:</h4>
+        <h4 class="">Computer Software Engineering Technology</h4>
+        <h5 class="">New Program</h5>
+        <div class="dropdown-Menu-Class-Selection"></div>
+        <div class="submit-Button">
+          <p>SUBMIT</p>
+        </div>
+      </div>
+    </section>
+
     <section class="pop-Up-2d">
       <div class="popup-Outline">
         <h4 class="">Course Registration Help</h4>
