Partly finished help 2c

--- a/pages/upcomingcourses.html
+++ b/pages/upcomingcourses.html
@@ -217,6 +217,17 @@
         </div>
       </div>
     </section>
+
+    <section class="pop-Up-2c">
+      <div class="popup-Outline">
+        <h4 class="">Course Registration Help</h4>
+        <h4 class="">Error: Other Issue</h4>
+        <p>Please briefly describe the issue you are having:</p>
+        <div class="thanks-Button">
+          <p>THANKS!</p>
+        </div>
+      </section>
+
     <script src="javascript/counter.js" type="text/javascript"></script>
   </body>
   </html>
