--- a/pages/upcomingcourses.html
+++ b/pages/upcomingcourses.html
@@ -223,8 +223,8 @@
         <h4 class="">Course Registration Help</h4>
         <h4 class="">Error: Other Issue</h4>
         <p>Please briefly describe the issue you are having:</p>
-        <div class="thanks-Button">
-          <p>THANKS!</p>
+        <div class="submit-Button">
+          <p>SUBMIT</p>
         </div>
       </section>
 
