Get help 1 is finished.

--- a/pages/upcomingcourses.html
+++ b/pages/upcomingcourses.html
@@ -194,6 +194,20 @@
       </div>
     </section>
 
+    <section class="pop-Up-1">
+      <div class="popup-Outline">
+        <h4 class="">Course Registration Help</h4>
+        <ul>
+          <li>I'd like to change majors</li>
+          <li>My major courses are unavailable</li>
+          <li>Other issue.</li>
+        </ul>
+        <div class="next-Button">
+          <p>NEXT</p>
+        </div>
+      </div>
+    </section>
+
     <section class="pop-Up-2a">
       <div class="popup-Outline">
         <h4 class="">Course Registration Help</h4>
