Finished get help 2b

--- a/pages/upcomingcourses.html
+++ b/pages/upcomingcourses.html
@@ -221,6 +221,16 @@
       </div>
     </section>
 
+    <section class="pop-Up-2b">
+      <div class="popup-Outline">
+        <h4 class="">Course Registration Help</h4>
+        <h4 class="">Error: Major Courses Unavailable.</h4>
+        <p>Your response has been recorded. Support will be in touch via email.</p>
+        <div class="okay-Button">
+          <p>OKAY</p>
+        </div>
+      </section>
+
     <section class="pop-Up-2d">
       <div class="popup-Outline">
         <h4 class="">Course Registration Help</h4>
