Finished grade & reporting text style classes.

--- a/pages/grades-reporting.html
+++ b/pages/grades-reporting.html
@@ -61,242 +61,242 @@
     <section class="scrolling-Content">
       <!-- This section consists of the course information -->
         <!-- Half of this page is connected to a div container so they are easy to seperate -->
-        <div class="enrolled-Courses">
+        <div class="left-Content">
           <h4 class="content-Title-Text">Enrolled Courses:</h4>
           <h4 class="hero-Title-Text">CSET 105, M, 12:00pm - 4:30pm</h4>
-          <h1 class="">Into to Web Applications</h1>
+          <h1 class="content-Subtitle-Text">Into to Web Applications</h1>
           <!-- The grade is given a white background to work inside of -->
-          <div class="grade-Background">
-            <div class="grade-Circle">
-              <div class="">
-                <h1 class="grade-Complete">40%</h1>
-                <p class=""> of class completed</p>
+          <div class="grades-Background">
+            <div class="grades-Circle">
+              <div class="grades-Circle-Highlight">
+                <h1 class="grades-Complete-Text">40%</h1>
+                <p class="grades-Dates-Text"> of class completed</p>
               </div>
             </div>
           </div>
           <!-- More divs are used inside of the white box to  -->
-          <div class="">
-            <h6 class="">Start Date:</h6>
-            <p class="">August 20, 2017</p>
+          <div class="grades-Start-Date">
+            <h6 class="grades-Dates-Text">Start Date:</h6>
+            <p class="grades-Dates-Text">August 20, 2017</p>
           </div>
-          <div class="">
-            <h6 class="">End Date:</h6>
-            <p class="">December 15, 2017</p>
+          <div class="grades-End-Date">
+            <h6 class="grades-Dates-Text">End Date:</h6>
+            <p class="grades-Dates-Text">December 15, 2017</p>
           </div>
 
-          <h4 class="">CSET 120, T&amp;W, 12:00pm - 4:30pm</h4>
-          <h1 class="">Software Project I</h1>
+          <h4 class="hero-Title-Text">CSET 120, T&amp;W, 12:00pm - 4:30pm</h4>
+          <h1 class="content-Subtitle-Text">Software Project I</h1>
           <!-- The grade is given a white background to work inside of -->
-          <div class="grade-Background">
-            <div class="grade-Circle">
-              <div class="">
+          <div class="grades-Background">
+            <div class="grades-Circles">
+              <div class="grades-Circle-Highlight">
                 <h1 class="grade-Complete">40%</h1>
-                <p class=""> of class completed</p>
+                <p class="grades-Dates-Text"> of class completed</p>
               </div>
             </div>
           </div>
           <!-- More divs are used inside of the white box to  -->
-          <div class="">
-            <h6 class="">Start Date:</h6>
-            <p class="">August 20, 2017</p>
+          <div class="grades-Start-Date">
+            <h6 class="grades-Dates-Text">Start Date:</h6>
+            <p class="grades-Dates-Text">August 20, 2017</p>
           </div>
-          <div class="">
-            <h6 class="">End Date:</h6>
-            <p class="">December 15, 2017</p>
+          <div class="grades-End-Date">
+            <h6 class="grades-Dates-Text">End Date:</h6>
+            <p class="grades-Dates-Text">December 15, 2017</p>
           </div>
 
-          <h4 class="">CSET 115, TH, 12:00pm - 4:30pm</h4>
-          <h1 class="">Technical Requirements and DataStructures</h1>
+          <h4 class="hero-Title-Text">CSET 115, TH, 12:00pm - 4:30pm</h4>
+          <h1 class="content-Subtitle-Text">Technical Requirements and DataStructures</h1>
           <!-- The grade is given a white background to work inside of -->
-          <div class="grade-Background">
-            <div class="grade-Circle">
-              <div class="">
+          <div class="grades-Background">
+            <div class="grades-Circles">
+              <div class="grades-Circle-Highlight">
                 <h1 class="grade-Complete">40%</h1>
-                <p class=""> of class completed</p>
+                <p class="grades-Dates-Text"> of class completed</p>
               </div>
             </div>
           </div>
           <!-- More divs are used inside of the white box to  -->
-          <div class="">
-            <h6 class="">Start Date:</h6>
-            <p class="">August 20, 2017</p>
+          <div class="grades-Start-Date">
+            <h6 class="grades-Dates-Text">Start Date:</h6>
+            <p class="grades-Dates-Text">August 20, 2017</p>
           </div>
-          <div class="">
-            <h6 class="">End Date:</h6>
-            <p class="">December 15, 2017</p>
+          <div class="grades-End-Date">
+            <h6 class="grades-Dates-Text">End Date:</h6>
+            <p class="grades-Dates-Text">December 15, 2017</p>
           </div>
 
-          <h4 class="">CSET 110, F, 12:00pm - 4:30pm</h4>
-          <h1 class="">Web Development I</h1>
+          <h4 class="hero-Title-Text">CSET 110, F, 12:00pm - 4:30pm</h4>
+          <h1 class="content-Subtitle-Text">Web Development I</h1>
           <!-- The grade is given a white background to work inside of -->
-          <div class="grade-Background">
-            <div class="grade-Circle">
-              <div class="">
+          <div class="grades-Background">
+            <div class="grades-Circles">
+              <div class="grades-Circle-Highlight">
                 <h1 class="grade-Complete">40%</h1>
-                <p class=""> of class completed</p>
+                <p class="grades-Dates-Text"> of class completed</p>
               </div>
             </div>
           </div>
           <!-- More divs are used inside of the white box to  -->
-          <div class="">
-            <h6 class="">Start Date:</h6>
-            <p class="">August 20, 2017</p>
+          <div class="grades-Start-Date">
+            <h6 class="grades-Dates-Text">Start Date:</h6>
+            <p class="grades-Dates-Text">August 20, 2017</p>
           </div>
-          <div class="">
-            <h6 class="">End Date:</h6>
-            <p class="">December 15, 2017</p>
+          <div class="grades-End-Date">
+            <h6 class="grades-Dates-Text">End Date:</h6>
+            <p class="grades-Dates-Text">December 15, 2017</p>
           </div>
 
-          <h4 class="">MATH 137 K, T&amp;TH, 8:00am - 9:20am</h4>
-          <h1 class="">Intermediate Algebra</h1>
+          <h4 class="hero-Title-Text">MATH 137 K, T&amp;TH, 8:00am - 9:20am</h4>
+          <h1 class="content-Subtitle-Text">Intermediate Algebra</h1>
           <!-- The grade is given a white background to work inside of -->
-          <div class="grade-Background">
-            <div class="grade-Circle">
-              <div class="">
+          <div class="grades-Background">
+            <div class="grades-Circles">
+              <div class="grades-Circle-Highlight">
                 <h1 class="grade-Complete">40%</h1>
-                <p class=""> of class completed</p>
+                <p class="grades-Dates-Text"> of class completed</p>
               </div>
             </div>
           </div>
           <!-- More divs are used inside of the white box to  -->
-          <div class="">
-            <h6 class="">Start Date:</h6>
-            <p class="">August 20, 2017</p>
+          <div class="grades-Start-Date">
+            <h6 class="grades-Dates-Text">Start Date:</h6>
+            <p class="grades-Dates-Text">August 20, 2017</p>
           </div>
-          <div class="">
-            <h6 class="">End Date:</h6>
-            <p class="">December 15, 2017</p>
+          <div class="grades-End-Date">
+            <h6 class="grades-Dates-Text">End Date:</h6>
+            <p class="grades-Dates-Text">December 15, 2017</p>
           </div>
 
-          <h4 class="">ENG 106 J, T&amp;TH, 9:30am - 10:50am</h4>
-          <h1 class="">Into to Web Applications</h1>
+          <h4 class="hero-Title-Text">ENG 106 J, T&amp;TH, 9:30am - 10:50am</h4>
+          <h1 class="content-Subtitle-Text">Into to Web Applications</h1>
           <!-- The grade is given a white background to work inside of -->
-          <div class="grade-Background">
-            <div class="grade-Circle">
-              <div class="">
+          <div class="grades-Background">
+            <div class="grades-Circles">
+              <div class="grades-Circle-Highlight">
                 <h1 class="grade-Complete">40%</h1>
-                <p class=""> of class completed</p>
+                <p class="grades-Dates-Text"> of class completed</p>
               </div>
             </div>
           </div>
           <!-- More divs are used inside of the white box to  -->
-          <div class="">
-            <h6 class="">Start Date:</h6>
-            <p class="">August 20, 2017</p>
+          <div class="grades-Start-Date">
+            <h6 class="grades-Dates-Text">Start Date:</h6>
+            <p class="grades-Dates-Text">August 20, 2017</p>
           </div>
-          <div class="">
-            <h6 class="">End Date:</h6>
-            <p class="">December 15, 2017</p>
+          <div class="grades-End-Date">
+            <h6 class="grades-Dates-Text">End Date:</h6>
+            <p class="grades-Dates-Text">December 15, 2017</p>
           </div>
         </div>
         <!-- Here starts the second half of the scrolling section. -->
-        <div class="">
-          <div class="grade-Percent-Background">
-            <h6 class="">Current Percent:</h6>
+        <div class="right-Content">
+          <div class="grades-Percent-Background">
+            <h6 class="grades-Title-Text">Current Percent:</h6>
             <!-- This h1 has to be calculated in JavaScript -->
-            <h1 class="grade-Percent">%</h1>
+            <h1 class="grades-Percent">%</h1>
           </div>
-          <h6 class="">Recently Graded</h6>
+          <h6 class="grades-Title-Text">Recently Graded</h6>
           <!-- The divs here seperate the titles and percentages -->
-          <div class="">
-            <h6 class="">HTML &amp; CSS #2 project</h6>
-            <h6 class="">CSS Test</h6>
-            <h6 class="">Tech Talk #2</h6>
+          <div class="right-Content-Subtitle-Boxes">
+            <h6 class="grades-Subtitle-Text">HTML &amp; CSS #2 project</h6>
+            <h6 class="grades-Subtitle-Text">CSS Test</h6>
+            <h6 class="grades-Subtitle-Text">Tech Talk #2</h6>
           </div>
-          <div class="">
-            <h6 class="">90%</h6>
-            <h6 class="">85%</h6>
-            <h6 class="">100%</h6>
+          <div class="right-Content-Subtitle-Boxes">
+            <h6 class="grades-Subtitle-Text">90%</h6>
+            <h6 class="grades-Subtitle-Text">85%</h6>
+            <h6 class="grades-Subtitle-Text">100%</h6>
           </div>
 
-          <div class="grade-Percent-Background">
-            <h6 class="">Current Percent:</h6>
+          <div class="grades-Percent-Background">
+            <h6 class="grades-Title-Text">Current Percent:</h6>
             <!-- This h1 has to be calculated in JavaScript -->
-            <h1 class="grade-Percent">%</h1>
+            <h1 class="grades-Percent">%</h1>
           </div>
-          <h6 class="">Recently Graded</h6>
+          <h6 class="grades-Title-Text">Recently Graded</h6>
           <!-- The divs here seperate the titles and percentages -->
-          <div class="">
-            <h6 class="">HTML &amp; CSS #2 project</h6>
-            <h6 class="">CSS Test</h6>
-            <h6 class="">Tech Talk #2</h6>
+          <div class="right-Content-Subtitle-Boxes">
+            <h6 class="grades-Subtitle-Text">HTML &amp; CSS #2 project</h6>
+            <h6 class="grades-Subtitle-Text">CSS Test</h6>
+            <h6 class="grades-Subtitle-Text">Tech Talk #2</h6>
           </div>
-          <div class="">
-            <h6 class="">90%</h6>
-            <h6 class="">85%</h6>
-            <h6 class="">100%</h6>
+          <div class="right-Content-Subtitle-Boxes">
+            <h6 class="grades-Subtitle-Text">90%</h6>
+            <h6 class="grades-Subtitle-Text">85%</h6>
+            <h6 class="grades-Subtitle-Text">100%</h6>
           </div>
 
-          <div class="grade-Percent-Background">
-            <h6 class="">Current Percent:</h6>
+          <div class="grades-Percent-Background">
+            <h6 class="grades-Title-Text">Current Percent:</h6>
             <!-- This h1 has to be calculated in JavaScript -->
-            <h1 class="grade-Percent">%</h1>
+            <h1 class="grades-Percent">%</h1>
           </div>
-          <h6 class="">Recently Graded</h6>
+          <h6 class="grades-Title-Text">Recently Graded</h6>
           <!-- The divs here seperate the titles and percentages -->
-          <div class="">
-            <h6 class="">HTML &amp; CSS #2 project</h6>
-            <h6 class="">CSS Test</h6>
-            <h6 class="">Tech Talk #2</h6>
+          <div class="right-Content-Subtitle-Boxes">
+            <h6 class="grades-Subtitle-Text">HTML &amp; CSS #2 project</h6>
+            <h6 class="grades-Subtitle-Text">CSS Test</h6>
+            <h6 class="grades-Subtitle-Text">Tech Talk #2</h6>
           </div>
-          <div class="">
-            <h6 class="">90%</h6>
-            <h6 class="">85%</h6>
-            <h6 class="">100%</h6>
+          <div class="right-Content-Subtitle-Boxes">
+            <h6 class="grades-Subtitle-Text">90%</h6>
+            <h6 class="grades-Subtitle-Text">85%</h6>
+            <h6 class="grades-Subtitle-Text">100%</h6>
           </div>
 
-          <div class="grade-Percent-Background">
-            <h6 class="">Current Percent:</h6>
+          <div class="grades-Percent-Background">
+            <h6 class="grades-Title-Text">Current Percent:</h6>
             <!-- This h1 has to be calculated in JavaScript -->
-            <h1 class="grade-Percent">%</h1>
+            <h1 class="grades-Percent">%</h1>
           </div>
-          <h6 class="">Recently Graded</h6>
+          <h6 class="grades-Title-Text">Recently Graded</h6>
           <!-- The divs here seperate the titles and percentages -->
-          <div class="">
-            <h6 class="">HTML &amp; CSS #2 project</h6>
-            <h6 class="">CSS Test</h6>
-            <h6 class="">Tech Talk #2</h6>
+          <div class="right-Content-Subtitle-Boxes">
+            <h6 class="grades-Subtitle-Text">HTML &amp; CSS #2 project</h6>
+            <h6 class="grades-Subtitle-Text">CSS Test</h6>
+            <h6 class="grades-Subtitle-Text">Tech Talk #2</h6>
           </div>
-          <div class="">
-            <h6 class="">90%</h6>
-            <h6 class="">85%</h6>
-            <h6 class="">100%</h6>
+          <div class="right-Content-Subtitle-Boxes">
+            <h6 class="grades-Subtitle-Text">90%</h6>
+            <h6 class="grades-Subtitle-Text">85%</h6>
+            <h6 class="grades-Subtitle-Text">100%</h6>
           </div>
 
-          <div class="grade-Percent-Background">
-            <h6 class="">Current Percent:</h6>
+          <div class="grades-Percent-Background">
+            <h6 class="grades-Title-Text">Current Percent:</h6>
             <!-- This h1 has to be calculated in JavaScript -->
-            <h1 class="grade-Percent">%</h1>
+            <h1 class="grades-Percent">%</h1>
           </div>
-          <h6 class="">Recently Graded</h6>
+          <h6 class="grades-Title-Text">Recently Graded</h6>
           <!-- The divs here seperate the titles and percentages -->
-          <div class="">
-            <h6 class="">HTML &amp; CSS #2 project</h6>
-            <h6 class="">CSS Test</h6>
-            <h6 class="">Tech Talk #2</h6>
+          <div class="right-Content-Subtitle-Boxes">
+            <h6 class="grades-Subtitle-Text">HTML &amp; CSS #2 project</h6>
+            <h6 class="grades-Subtitle-Text">CSS Test</h6>
+            <h6 class="grades-Subtitle-Text">Tech Talk #2</h6>
           </div>
-          <div class="">
-            <h6 class="">90%</h6>
-            <h6 class="">85%</h6>
-            <h6 class="">100%</h6>
+          <div class="right-Content-Subtitle-Boxes">
+            <h6 class="grades-Subtitle-Text">90%</h6>
+            <h6 class="grades-Subtitle-Text">85%</h6>
+            <h6 class="grades-Subtitle-Text">100%</h6>
           </div>
 
-          <div class="grade-Percent-Background">
-            <h6 class="">Current Percent:</h6>
+          <div class="grades-Percent-Background">
+            <h6 class="grades-Title-Text">Current Percent:</h6>
             <!-- This h1 has to be calculated in JavaScript -->
-            <h1 class="grade-Percent">%</h1>
+            <h1 class="grades-Percent">%</h1>
           </div>
-          <h6 class="">Recently Graded</h6>
+          <h6 class="grades-Title-Text">Recently Graded</h6>
           <!-- The divs here seperate the titles and percentages -->
-          <div class="">
-            <h6 class="">HTML &amp; CSS #2 project</h6>
-            <h6 class="">CSS Test</h6>
-            <h6 class="">Tech Talk #2</h6>
+          <div class="right-Content-Subtitle-Boxes">
+            <h6 class="grades-Subtitle-Text">HTML &amp; CSS #2 project</h6>
+            <h6 class="grades-Subtitle-Text">CSS Test</h6>
+            <h6 class="grades-Subtitle-Text">Tech Talk #2</h6>
           </div>
-          <div class="">
-            <h6 class="">90%</h6>
-            <h6 class="">85%</h6>
-            <h6 class="">100%</h6>
+          <div class="right-Content-Subtitle-Boxes">
+            <h6 class="grades-Subtitle-Text">90%</h6>
+            <h6 class="grades-Subtitle-Text">85%</h6>
+            <h6 class="grades-Subtitle-Text">100%</h6>
           </div>
         </div>
       </section>
