Made some classes, using Daves Computer. -Zach

--- a/pages/currentschedule.html
+++ b/pages/currentschedule.html
@@ -16,60 +16,60 @@
     </header>
     <section class="hero-Content">
       <div class="current-Program">
-        <h4 class="">Current Program:</h4>
-          <h1 class="">Computer Software Engineering Technology</h1>
-        </div>
-        <div class="current-Semester">
-          <h4 class="">Current Semester:</h4>
-          <h1 class="">Fall 2017</h1>
-        </div>
-        <div class="enrolled-Credit-Hours">
-          <h4 class="">Enrolled Credit Hours:</h4>
-          <h1 class="">15</h1>
-        </div>
-        <div class="academic-Standing">
-          <h4 class="">Academic Standing</h4>
-          <h1 class="">Good</h1>
-        </div>
-        <div class="page-Breaks"></div>
+        <h4 class="content-Title-Text">Current Program:</h4>
+        <h1 class="content-Subtitle-Text">Computer Software Engineering Technology></h1>
+      </div>
+      <div class="current-Semester">
+        <h4 class="content-Title-Text">Current Semester:</h4>
+        <h1 class="content-Subtitle-Text">Fall 2017</h1>
+      </div>
+      <div class="enrolled-Credit-Hours">
+        <h4 class="content-Title-Text">Enrolled Credit Hours:</h4>
+        <h1 class="content-Subtitle-Text">15</h1>
+      </div>
+      <div class="academic-Standing">
+        <h4 class="content-Title-Text">Academic Standing</h4>
+        <h1 class="content-Subtitle-Text">Good</h1>
+      </div>
+      <div class="page-Breaks"></div>
       </section>
 
       <aside class="aside">
-        <h1 class="">Benedict Cumberbatch</h1>
-        <h5 class="">Academic Services</h5>
+        <h1 class="profile-Name">Benedict Cumberbatch</h1>
+        <h5 class="aside-Titles">Academic Services</h5>
         <ul>
-          <li class="">Current Schedule</li>
-          <li class="">Grades &amp; Reporting</li>
-          <li class="">Upcoming Courses</li>
+          <li class="aside-Options">Current Schedule</li>
+          <li class="aside-Options">Grades &amp; Reporting</li>
+          <li class="aside-Options">Upcoming Courses</li>
         </ul>
-        <h5 class="">College Information</h5>
+        <h5 class="aside-Titles">College Information</h5>
         <ul>
-          <li class="">College Calender</li>
-          <li class="">Financial Aid</li>
-          <li class="">Student Services</li>
+          <li class="aside-Options">College Calendar</li>
+          <li class="aside-Options">Financial Aid</li>
+          <li class="aside-Options">Student Services</li>
         </ul>
         </aside>
 
         <div class="current-Schedule">
-          <h1 class="">Current Schedule:</h1>
+          <h1 class="current-Title-Text">Current Schedule:</h1>
 
-          <h4 class="">CSET 105, M, 12:00pm - 4:30pm</h4>
-          <h1 class="">Intro to Web Application</h1>
+          <h4 class="current-Classtime">CSET 105, M, 12:00pm - 4:30pm</h4>
+          <h1 class="current-Classname">Intro to Web Application</h1>
 
-          <h4 class="">CSET 110, T, 12:00pm - 4:30pm &amp; W, 12:30pm - 4:30pm</h4>
-          <h1 class="">Web Development I</h1>
+          <h4 class="current-Classtime">CSET 110, T, 12:00pm - 4:30pm &amp; W, 12:30pm - 4:30pm</h4>
+          <h1 class="current-Classname">Web Development I</h1>
 
-          <h4 class="">CSET 115, R, 12:00pm - 4:30pm</h4>
-          <h1 class="">Technical Requirements &amp; Data Structures</h1>
+          <h4 class="current-Classtime">CSET 115, R, 12:00pm - 4:30pm</h4>
+          <h1 class="current-Classname">Technical Requirements &amp; Data Structures</h1>
 
-          <h4 class="">CSET 120, F, 12:00pm - 4:30pm</h4>
-          <h1 class="">Software Project I/Open Lab</h1>
+          <h4 class="current-Classtime">CSET 120, F, 12:00pm - 4:30pm</h4>
+          <h1 class="current-Classname">Software Project I/Open Lab</h1>
 
-          <h4 class="">ENGL 100, M &amp; W, 8am - 9:30am</h4>
-          <h1 class="">English Composition</h1>
+          <h4 class="current-Classtime">ENGL 100, M &amp; W, 8am - 9:30am</h4>
+          <h1 class="current-Classname">English Composition</h1>
 
-          <h4 class="">MATH 100, T &amp; R, 8am - 9:30pm</h4>
-          <h1 class="">College Algebra</h1>
+          <h4 class="current-Classtime">MATH 100, T &amp; R, 8am - 9:30pm</h4>
+          <h1 class="current-Classname">College Algebra</h1>
         </div>
 
         <div class="view-As">
