--- a/pages/grades-reporting.html
+++ b/pages/grades-reporting.html
@@ -42,7 +42,7 @@
       <div class="page-Breaks"></div>
     </section>
     <!-- This section is used for the profile and desktop tabs. Each heading has a subtitle list of links to view. -->
-    <section class="aside">
+    <aside class="aside">
       <h1 class="profile-Name">Benedic Cumberbatch</h1>
       <h5 class="aside-Titles">Academic Services</h5>
       <ul>
@@ -56,7 +56,7 @@
         <li class="aside-Options">Financial Aid</li>
         <li class="aside-Options">Student Services</li>
       </ul>
-    </section>
+    </aside>
 
     <section class="scrolling-Content">
       <!-- This section consists of the course information -->
