--- a/pages/currentschedule.html
+++ b/pages/currentschedule.html
@@ -32,118 +32,118 @@
         <h1 class="content-Subtitle-Text">Good</h1>
       </div>
       <div class="page-Breaks"></div>
-      </section>
+    </section>
 
-      <aside class="aside">
-        <h1 class="profile-Name">Benedict Cumberbatch</h1>
-        <h5 class="aside-Titles">Academic Services</h5>
-        <ul>
-          <li class="aside-Options">Current Schedule</li>
-          <li class="aside-Options">Grades &amp; Reporting</li>
-          <li class="aside-Options">Upcoming Courses</li>
-        </ul>
-        <h5 class="aside-Titles">College Information</h5>
-        <ul>
-          <li class="aside-Options">College Calendar</li>
-          <li class="aside-Options">Financial Aid</li>
-          <li class="aside-Options">Student Services</li>
-        </ul>
-        </aside>
+    <aside class="aside">
+      <h1 class="profile-Name">Benedict Cumberbatch</h1>
+      <h5 class="aside-Titles">Academic Services</h5>
+      <ul>
+        <li class="aside-Options">Current Schedule</li>
+        <li class="aside-Options">Grades &amp; Reporting</li>
+        <li class="aside-Options">Upcoming Courses</li>
+      </ul>
+      <h5 class="aside-Titles">College Information</h5>
+      <ul>
+        <li class="aside-Options">College Calendar</li>
+        <li class="aside-Options">Financial Aid</li>
+        <li class="aside-Options">Student Services</li>
+      </ul>
+    </aside>
 
-        <div class="current-Schedule">
-          <h1 class="current-Title-Text">Current Schedule:</h1>
+    <div class="current-Schedule">
+      <h1 class="current-Title-Text">Current Schedule:</h1>
 
-          <h4 class="current-Classtime">CSET 105, M, 12:00pm - 4:30pm</h4>
-          <h1 class="current-Classname">Intro to Web Application</h1>
+      <h4 class="current-Classtime">CSET 105, M, 12:00pm - 4:30pm</h4>
+      <h1 class="current-Classname">Intro to Web Application</h1>
 
-          <h4 class="current-Classtime">CSET 110, T, 12:00pm - 4:30pm &amp; W, 12:30pm - 4:30pm</h4>
-          <h1 class="current-Classname">Web Development I</h1>
+      <h4 class="current-Classtime">CSET 110, T, 12:00pm - 4:30pm &amp; W, 12:30pm - 4:30pm</h4>
+      <h1 class="current-Classname">Web Development I</h1>
 
-          <h4 class="current-Classtime">CSET 115, R, 12:00pm - 4:30pm</h4>
-          <h1 class="current-Classname">Technical Requirements &amp; Data Structures</h1>
+      <h4 class="current-Classtime">CSET 115, R, 12:00pm - 4:30pm</h4>
+      <h1 class="current-Classname">Technical Requirements &amp; Data Structures</h1>
 
-          <h4 class="current-Classtime">CSET 120, F, 12:00pm - 4:30pm</h4>
-          <h1 class="current-Classname">Software Project I/Open Lab</h1>
+      <h4 class="current-Classtime">CSET 120, F, 12:00pm - 4:30pm</h4>
+      <h1 class="current-Classname">Software Project I/Open Lab</h1>
 
-          <h4 class="current-Classtime">ENGL 100, M &amp; W, 8am - 9:30am</h4>
-          <h1 class="current-Classname">English Composition</h1>
+      <h4 class="current-Classtime">ENGL 100, M &amp; W, 8am - 9:30am</h4>
+      <h1 class="current-Classname">English Composition</h1>
 
-          <h4 class="current-Classtime">MATH 100, T &amp; R, 8am - 9:30pm</h4>
-          <h1 class="current-Classname">College Algebra</h1>
+      <h4 class="current-Classtime">MATH 100, T &amp; R, 8am - 9:30pm</h4>
+      <h1 class="current-Classname">College Algebra</h1>
+    </div>
+
+    <div class="view-As">
+      <p>View As: List</p><span>|</span><p>Calender</p>
+    </div>
+
+    <section class="current-Schedule-Calender">
+      <div class="monday">
+        <h1 class="day">Monday</h1>
+
+        <div class="eng-101">
+          <h4 class="current-Classtime-Two">ENGL 101, 8:30 - 9:30AM</h4>
+          <h2 class="current-Classname-Two">English Compostion</h2>
         </div>
 
-        <div class="view-As">
-          <p>View As: List</p><span>|</span><p>Calender</p>
+        <div class="cset-105">
+          <h4 class="current-Classtime-Two">CSET 105, 12:00 - 4:30PM</h4>
+          <h2 class="current-Classname-Two">Intro to Web Applications</h2>
+        </div>
+      </div>
+
+      <div class="tuesday">
+        <h1 class="day">Tuesday</h1>
+
+        <div class="math-100">
+          <h4 class="current-Classtime-Two">MATH 100, 8:00 - 9:30AM</h4>
+          <h2 class="current-Classname-Two">College Algebra</h2>
         </div>
 
-        <section class="current-Schedule-Calender">
-          <div class="monday">
-            <h1 class="">Monday</h1>
+        <div class="cset-110">
+          <h4 class="current-Classtime-Two">CSET 110, 12:00 - 4:30PM</h4>
+          <h2 class="current-Classname-Two">Web Development 1</h2>
+        </div>
+      </div>
 
-            <div class="eng-101">
-              <h4 class="">ENGL 101, 8:30 - 9:30AM</h4>
-              <h2 class="">English Compostion</h2>
-            </div>
+      <div class="wednesday">
+        <h1 class="day">Wednesday</h1>
 
-            <div class="cset-105">
-              <h4 class="">CSET 105, 12:00 - 4:30PM</h4>
-              <h2 class="">Intro to Web Applications</h2>
-            </div>
-          </div>
+        <div class="eng-101">
+          <h4 class="current-Classtime-Two">ENGL 101, 8:30 - 9:30AM</h4>
+          <h2 class="current-Classname-Two">English Compostion</h2>
+        </div>
 
-          <div class="tuesday">
-            <h1 class="">Tuesday</h1>
+        <div class="cset-110">
+          <h4 class="current-Classtime-Two">CSET 110, 12:00 - 4:30PM</h4>
+          <h2 class="current-Classname-Two">Web Development 1</h2>
+        </div>
+      </div>
 
-            <div class="math-100">
-              <h4 class="">MATH 100, 8:00 - 9:30AM</h4>
-              <h2 class="">College Algebra</h2>
-            </div>
+      <div class="thursday">
+        <h1 class="day">Thursday</h1>
 
-            <div class="cset-110">
-              <h4 class="">CSET 110, 12:00 - 4:30PM</h4>
-              <h2 class="">Web Development 1</h2>
-            </div>
-          </div>
+        <div class="math-100">
+          <h4 class="current-Classtime-Two">MATH 100, 8:00 - 9:30AM</h4>
+          <h2 class="current-Classname-Two">College Algebra</h2>
+        </div>
 
-            <div class="wednesday">
-              <h1 class="">Wednesday</h1>
+        <div class="cset-115">
+          <h4 class="current-Classtime-Two">CSET 115, 12:00 - 4:30PM</h4>
+          <h2 class="current-Classname-Two">Technical Requirements &amp; Data Structures</h2>
+        </div>
+      </div>
 
-              <div class="eng-101">
-                <h4 class="">ENGL 101, 8:30 - 9:30AM</h4>
-                <h2 class="">English Compostion</h2>
-              </div>
+      <div class="friday">
+        <h1 class="day">Friday</h1>
 
-              <div class="cset-110">
-                <h4 class="">CSET 110, 12:00 - 4:30PM</h4>
-                <h2 class="">Web Development 1</h2>
-              </div>
-            </div>
+        <div class="cset-120">
+          <h4 class="current-Classtime-Two">CSET 120, 12:00 - 4:30PM</h4>
+          <h2 class="current-Classname-Two">Software Project 1 Open Lab</h2>
+        </div>
+      </div>
+    </section>
+  </section>
 
-              <div class="thursday">
-                <h1 class="">Thursday</h1>
-
-                <div class="math-100">
-                  <h4 class="">MATH 100, 8:00 - 9:30AM</h4>
-                  <h2 class="">College Algebra</h2>
-                </div>
-
-                <div class="cset-115">
-                  <h4 class="">CSET 115, 12:00 - 4:30PM</h4>
-                  <h2 class="">Technical Requirements &amp; Data Structures</h2>
-                </div>
-              </div>
-
-                <div class="friday">
-                  <h1 class="">Friday</h1>
-
-                  <div class="cset-120">
-                    <h4 class="">CSET 120, 12:00 - 4:30PM</h4>
-                    <h2 class="">Software Project 1 Open Lab</h2>
-                  </div>
-                </div>
-              </section>
-            </section>
-
-              <script src="javascript/counter.js" type="text/javascript"></script>
-            </body>
-            </html>
+  <script src="javascript/counter.js" type="text/javascript"></script>
+</body>
+</html>
