moved boxes around with david

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <header class="body-Header">
 
-    <h4 class="header-Title-Text">Home.</h4>
+    <h4 class="header-Title-Text">Home</h4>
     <!-- The empty h4 is for the current date through javascript.-->
     <ul class="date-Log-Out">
     <li class="header-Date-Text">Date</li>
@@ -27,7 +27,7 @@
     <!-- Each div is used to contain the headings as they need to be side by side of eachother in a non listed form. -->
     <div class="current-Program">
       <h4 class="content-Title-Text">CURRENT PROGRAM:</h4>
-      <h1 class="content-Subtitle-Text">Computer Software Engineering Technology></h1>
+      <h1 class="content-Subtitle-Text">Computer Software Engineering Technology</h1>
     </div>
     <div class="current-Semester">
       <h4 class="hero-Title-Text">Current Semester:</h4>
