--- a/index.html
+++ b/index.html
@@ -46,8 +46,12 @@
   <!-- This section is used for the profile and desktop tabs. Each heading has a subtitle list of links to view. -->
 
     <section class="aside">
-      <div class="circle"></div>
+      <div class="circle">
+        <div><img class="picture" src="images/profile-avatar.jpg"></div>
+      </div>
+
       <h1 class="profile-Name">Benedic Cumberbatch</h1>
+      <div class="aside-List">
       <h5 class="aside-Titles">Academic Services</h5>
       <ul>
         <li class="aside-Options">Current Schedule</li>
@@ -60,6 +64,7 @@
         <li class="aside-Options">Financial Aid</li>
         <li class="aside-Options">Student Services</li>
       </ul>
+    </div>
     </section>
     <!-- This section comprises of the program announcements and due dates in the top part of the scrolling section. -->
     <section class="scrolling-Content">
