--- a/pages/upcomingcourses.html
+++ b/pages/upcomingcourses.html
@@ -9,51 +9,57 @@
 <body>
   <section class="desktop-Background">
     <header class="">
-      <h4 class=""></h4>
-      <h4 class="">Home/Upcoming Courses</h4>
-      <h4 class="">Logout</h4>
+      <h4 class="time"></h4>
+      <h4 class="header-Title-Text">Home > Academic Services ></h4>
+      <h4 class="">Upcoming Courses</h4>
+
+      <ul class="date-Log-Out">
+        <li class="header-Date-Text">Date</li>
+        <li class="header-Date-Text">Log Out?</li>
+      </ul>
       <div class="rectangle-Header"></div>
     </header>
     <section class="hero-Content">
       <div class="current-Program">
-        <h4 class="">Current Program:</h4></div>
-        <h1 class="">Computer Software Engineering Technology</h1>
+        <h4 class="content-Title-Text">Current Program:</h4></div>
+        <h1 class="content-Subtitle-Text">Computer Software Engineering Technology</h1>
       </div>
       <div class="current-Semester">
-        <h4 class="">Current Semester:</h4>
-        <h1 class="">Fall 2017</h1>
+        <h4 class="content-Title-Tex">Current Semester:</h4>
+        <h1 class="content-Subtitle-Text">Fall 2017</h1>
       </div>
       <div class="enrolled-Credit-Hours">
-        <h4 class="">Enrolled Credit Hours:</h4>
-        <h1 class="">15</h1>
+        <h4 class="content-Title-Tex">Enrolled Credit Hours:</h4>
+        <h1 class="content-Subtitle-Text">15</h1>
       </div>
       <div class="academic-Standing">
-        <h4 class="">Academic Standing</h4>
-        <h1 class="">Good</h1>
+        <h4 class="content-Title-Tex">Academic Standing</h4>
+        <h1 class="content-Subtitle-Text">Good</h1>
       </div>
       <div class="page-Breaks"></div>
     </section>
 
     <aside class="aside">
-      <h1 class="">Benedict Cumberbatch</h1>
-      <h5 class="">Academic Services</h5>
+      <h1 class="profile-Name">Benedic Cumberbatch</h1>
+      <h5 class="aside-Titles">Academic Services</h5>
       <ul>
-        <li class="">Current Schedule</li>
-        <li class="">Grades &amp; Reporting</li>
-        <li class="">Upcoming Courses</li>
+        <li class="aside-Options">Current Schedule</li>
+        <li class="aside-Options">Grades &amp; Reporting</li>
+        <li class="aside-Options">Upcoming Courses</li>
       </ul>
-      <h5 class="">College Information</h5>
+      <h5 class="aside-Titles">College Information</h5>
       <ul>
-        <li class="">College Calender</li>
-        <li class="">Financial Aid</li>
-        <li class="">Student Services</li>
+        <li class="aside-Options">College Calendar</li>
+        <li class="aside-Options">Financial Aid</li>
+        <li class="aside-Options">Student Services</li>
+      </ul>
       </aside>
 
       <div class="upcoming-Courses">
-        <h1 class="">Upcoming Courses:</h1>
+        <h1 class="content-Title-Text">Upcoming Courses:</h1>
       </div>
       <div class="semester">
-        <p>Semester:</p><p>Spring 2018</p>
+        <p class="semester-Text">Semester:</p><p class="spring-Text">Spring 2018</p>
       </div>
 
       <div class="white-Box">
@@ -84,174 +90,174 @@
                 <li>Science</li>
                 <li>Social Sciences</li>
               </ol>
+            </div>
+            <div class="arrows-On-The-Rye">
+              <ol>
+                <li>></li>
+                <li>></li>
+                <li>></li>
+                <li>></li>
+                <li>></li>
+                <li>></li>
+                <li>></li>
+              </ol>
+              <!-- Comeback later to make the top two arrows selectable links. -->
+            </div>
+          </section>
+
+          <section class="">
+            <h4 class="">Course Registration Completion:</h4>
+            <div class="">50%</div>
+            <div class="completion-Bar"></div>
+            <h4 class="">Core Program Courses:</h4>
+            <!-- Use of Possible input tag here. Come back for later review -->
+            <div class="selectable-One">
+              <h4 class="">CSET 155</h4>
+              <h3 class="">Database Design</h3>
+            </div>
+
+            <div class="selectable-Two">
+              <h4 class="">CSET 160</h4>
+              <h3 class="">Web Development II</h3>
+            </div>
+
+            <div class="selectable-Three">
+              <h4 class="">CSET 170</h4>
+              <h3 class="">Security &amp; Proffesional Ethics</h3>
+            </div>
+
+            <div class="get-Help-Button">
+              <p>Get Help »</p>
+            </div>
+          </section>
+
+          <section class="">
+            <h4 class="">Course Registration Completion:</h4>
+            <div class="">60%</div>
+            <div class="completion-Bar"></div>
+            <h4 class="">General Education</h4>
+            <!-- Use of Possible input tag here. Come back for later review -->
+            <h4 class="">Computer Information Systems</h4>
+            <div class="line"></div>
+            <div class="option-One">
+              <h4 class="">CIS 105</h4>
+              <h3 class="">Drawing with AutoCAD</h3>
+            </div>
+
+            <div class="option-Two">
+              <h4 class="">CIS 111</h4>
+              <h3 class="">Introduction to Computer Applications</h3>
+            </div>
+
+            <div class="option-Three">
+              <h4 class="">CIS 211</h4>
+              <h3 class="">Microsoft Excel</h3>
+            </div>
+
+          </section>
+
+          <section class="">
+            <h4 class="">Course Registration Completion:</h4>
+            <div class="">60%</div>
+            <div class="completion-Bar"></div>
+            <h4 class="">General Education</h4>
+            <!-- Use of Possible input tag here. Come back for later review -->
+            <h4 class="">English</h4>
+            <div class="line"></div>
+            <div class="option-One">
+              <h4 class="">ENG 106</h4>
+              <h3 class="">English Composition</h3>
+            </div>
+
+            <div class="option-Two">
+              <h4 class="">ENG 116</h4>
+              <h3 class="">Short Story and Poetry</h3>
+            </div>
+
+            <div class="option-Three">
+              <h4 class="">ENG 216</h4>
+              <h3 class="">Technical Report Writing</h3>
+            </div>
+
+            <div class="option-Four">
+              <h4 class="">ENG 221</h4>
+              <h3 class="">Public Speaking</h3>
+            </div>
+
+            <div class="option-Five">
+              <h4 class="">ENG 225</h4>
+              <h3 class="">Short Contemporary Novel</h3>
+            </div>
+
           </div>
-          <div class="arrows-On-The-Rye">
-            <ol>
-              <li>></li>
-              <li>></li>
-              <li>></li>
-              <li>></li>
-              <li>></li>
-              <li>></li>
-              <li>></li>
-            </ol>
-            <!-- Comeback later to make the top two arrows selectable links. -->
+          <!-- Another button tag may be used here. Return later to make a button and mate with a script if needed. -->
+          <div class="register-Button">
+            <p>REGISTER »</p>
+          </div>
+
+          <div class="next-Button">
+            <p>NEXT »</p>
           </div>
         </section>
 
-        <section class="">
-          <h4 class="">Course Registration Completion:</h4>
-          <div class="">50%</div>
-          <div class="completion-Bar"></div>
-          <h4 class="">Core Program Courses:</h4>
-          <!-- Use of Possible input tag here. Come back for later review -->
-          <div class="selectable-One">
-            <h4 class="">CSET 155</h4>
-            <h3 class="">Database Design</h3>
-          </div>
-
-          <div class="selectable-Two">
-            <h4 class="">CSET 160</h4>
-            <h3 class="">Web Development II</h3>
-          </div>
-
-          <div class="selectable-Three">
-            <h4 class="">CSET 170</h4>
-            <h3 class="">Security &amp; Proffesional Ethics</h3>
-          </div>
-
-          <div class="get-Help-Button">
-            <p>Get Help »</p>
+        <section class="pop-Up-1">
+          <div class="popup-Outline">
+            <h4 class="">Course Registration Help</h4>
+            <ul>
+              <li>I'd like to change majors</li>
+              <li>My major courses are unavailable</li>
+              <li>Other issue.</li>
+            </ul>
+            <div class="next-Button">
+              <p>NEXT</p>
+            </div>
           </div>
         </section>
 
-        <section class="">
-          <h4 class="">Course Registration Completion:</h4>
-          <div class="">60%</div>
-          <div class="completion-Bar"></div>
-          <h4 class="">General Education</h4>
-          <!-- Use of Possible input tag here. Come back for later review -->
-          <h4 class="">Computer Information Systems</h4>
-          <div class="line"></div>
-          <div class="option-One">
-            <h4 class="">CIS 105</h4>
-            <h3 class="">Drawing with AutoCAD</h3>
+        <section class="pop-Up-2a">
+          <div class="popup-Outline">
+            <h4 class="">Course Registration Help</h4>
+            <h4 class="">Current Program:</h4>
+            <h4 class="">Computer Software Engineering Technology</h4>
+            <h5 class="">New Program</h5>
+            <div class="dropdown-Menu-Class-Selection"></div>
+            <div class="submit-Button">
+              <p>SUBMIT</p>
+            </div>
           </div>
-
-          <div class="option-Two">
-            <h4 class="">CIS 111</h4>
-            <h3 class="">Introduction to Computer Applications</h3>
-          </div>
-
-          <div class="option-Three">
-            <h4 class="">CIS 211</h4>
-            <h3 class="">Microsoft Excel</h3>
-          </div>
-
         </section>
 
-        <section class="">
-          <h4 class="">Course Registration Completion:</h4>
-          <div class="">60%</div>
-          <div class="completion-Bar"></div>
-          <h4 class="">General Education</h4>
-          <!-- Use of Possible input tag here. Come back for later review -->
-          <h4 class="">English</h4>
-          <div class="line"></div>
-          <div class="option-One">
-            <h4 class="">ENG 106</h4>
-            <h3 class="">English Composition</h3>
-          </div>
+        <section class="pop-Up-2b">
+          <div class="popup-Outline">
+            <h4 class="">Course Registration Help</h4>
+            <h4 class="">Error: Major Courses Unavailable.</h4>
+            <p>Your response has been recorded. Support will be in touch via email.</p>
+            <div class="okay-Button">
+              <p>OKAY</p>
+            </div>
+          </section>
 
-          <div class="option-Two">
-            <h4 class="">ENG 116</h4>
-            <h3 class="">Short Story and Poetry</h3>
-          </div>
+          <section class="pop-Up-2d">
+            <div class="popup-Outline">
+              <h4 class="">Course Registration Help</h4>
+              <h4 class="">Error: Other Issue</h4>
+              <p>Thank you! Your message has been submitted &amp; we will be in touch shortly.</p>
+              <div class="thanks-Button">
+                <p>THANKS!</p>
+              </div>
+            </div>
+          </section>
 
-          <div class="option-Three">
-            <h4 class="">ENG 216</h4>
-            <h3 class="">Technical Report Writing</h3>
-          </div>
+          <section class="pop-Up-2c">
+            <div class="popup-Outline">
+              <h4 class="">Course Registration Help</h4>
+              <h4 class="">Error: Other Issue</h4>
+              <p>Please briefly describe the issue you are having:</p>
+              <div class="submit-Button">
+                <p>SUBMIT</p>
+              </div>
+            </section>
 
-          <div class="option-Four">
-            <h4 class="">ENG 221</h4>
-            <h3 class="">Public Speaking</h3>
-          </div>
-
-          <div class="option-Five">
-            <h4 class="">ENG 225</h4>
-            <h3 class="">Short Contemporary Novel</h3>
-          </div>
-
-      </div>
-      <!-- Another button tag may be used here. Return later to make a button and mate with a script if needed. -->
-      <div class="register-Button">
-        <p>REGISTER »</p>
-      </div>
-
-      <div class="next-Button">
-        <p>NEXT »</p>
-      </div>
-    </section>
-
-    <section class="pop-Up-1">
-      <div class="popup-Outline">
-        <h4 class="">Course Registration Help</h4>
-        <ul>
-          <li>I'd like to change majors</li>
-          <li>My major courses are unavailable</li>
-          <li>Other issue.</li>
-        </ul>
-        <div class="next-Button">
-          <p>NEXT</p>
-        </div>
-      </div>
-    </section>
-
-    <section class="pop-Up-2a">
-      <div class="popup-Outline">
-        <h4 class="">Course Registration Help</h4>
-        <h4 class="">Current Program:</h4>
-        <h4 class="">Computer Software Engineering Technology</h4>
-        <h5 class="">New Program</h5>
-        <div class="dropdown-Menu-Class-Selection"></div>
-        <div class="submit-Button">
-          <p>SUBMIT</p>
-        </div>
-      </div>
-    </section>
-
-    <section class="pop-Up-2b">
-      <div class="popup-Outline">
-        <h4 class="">Course Registration Help</h4>
-        <h4 class="">Error: Major Courses Unavailable.</h4>
-        <p>Your response has been recorded. Support will be in touch via email.</p>
-        <div class="okay-Button">
-          <p>OKAY</p>
-        </div>
-      </section>
-
-    <section class="pop-Up-2d">
-      <div class="popup-Outline">
-        <h4 class="">Course Registration Help</h4>
-        <h4 class="">Error: Other Issue</h4>
-        <p>Thank you! Your message has been submitted &amp; we will be in touch shortly.</p>
-        <div class="thanks-Button">
-          <p>THANKS!</p>
-        </div>
-      </div>
-    </section>
-
-    <section class="pop-Up-2c">
-      <div class="popup-Outline">
-        <h4 class="">Course Registration Help</h4>
-        <h4 class="">Error: Other Issue</h4>
-        <p>Please briefly describe the issue you are having:</p>
-        <div class="submit-Button">
-          <p>SUBMIT</p>
-        </div>
-      </section>
-
-    <script src="javascript/counter.js" type="text/javascript"></script>
-  </body>
-  </html>
+            <script src="javascript/counter.js" type="text/javascript"></script>
+          </body>
+          </html>
