moving around header

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <li class="header-Date-Text">Log Out?</li>
     </ul>
     <!-- a div class will be used to create a rectangle line to seperate the content of each section-->
-    <div class="page-Breaks"></div>
+    <div class="page-Breaks top-Break"></div>
   </header>
   <!-- This section consists of the hero content used on every other document -->
   <section class="hero-Content">
