--- a/pages/upcomingcourses.html
+++ b/pages/upcomingcourses.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">
   <title>Upcoming Courses</title>
 </head>
 <body>
@@ -53,211 +53,216 @@
         <li class="aside-Options">Financial Aid</li>
         <li class="aside-Options">Student Services</li>
       </ul>
-      </aside>
+    </aside>
 
-      <div class="upcoming-Courses">
-        <h1 class="content-Title-Text">Upcoming Courses:</h1>
-      </div>
-      <div class="semester">
-        <p class="semester-Text">Semester:</p><p class="spring-Text">Spring 2018</p>
-      </div>
+    <div class="upcoming-Courses">
+      <h1 class="content-Title-Text">Upcoming Courses:</h1>
+    </div>
+    <div class="semester">
+      <p class="semester-Text">Semester:</p><p class="spring-Text">Spring 2018</p>
+    </div>
 
-      <div class="white-Box">
-        <section class="no-Classes-Registered">
-          <div class="">
-            <h4 class="">YOU CURRENTLY HAVE NO REGISTERED COURSES</h4>
-            <h1 class="">Register For Spring Courses.</h1>
+    <div class="white-Box">
+      <section class="no-Classes-Registered">
+        <div class="all-Caps-Rage">
+          <h4 class="content-Title-Text">YOU CURRENTLY HAVE NO REGISTERED COURSES</h4>
+          <h1 class="content-Subtitle-Text">Register For Spring Courses.</h1>
+        </div>
+        <div class="start-Button">
+          <button>START</button>
+        </div>
+      </section>
+
+      <section class="upc-Schedule-Geneds">
+        <h4 class="upc-C-Seven">Course Registration Completion:</h4>
+        <div class="upc-C-Seven">60%</div>
+        <div class="completion-Bar"></div>
+
+        <h4 class="upc-Bl-14">General Education</h4>
+        <div class="general-Option">
+          <div class="gen-Eds-Selection">
+            <ol>
+              <li class="upc-Course-List">Computer Information Systems</li>
+              <li class="upc-Course-List">English</li>
+              <li class="upc-Course-List">History</li>
+              <li class="upc-Course-List">Mathematics</li>
+              <li class="upc-Course-List">Physical Education and Health</li>
+              <li class="upc-Course-List">Science</li>
+              <li class="upc-Course-List">Social Sciences</li>
+            </ol>
           </div>
-          <div class="start-Button">
-            <button>START</button>
+          <div class="arrows-On-The-Rye">
+            <ol>
+              <li class="upc-Course-List">></li>
+              <li class="upc-Course-List">></li>
+              <li class="upc-Course-List"></li>
+              <li class="upc-Course-List">></li>
+              <li class="upc-Course-List">></li>
+              <li class="upc-Course-List">></li>
+              <li class="upc-Course-List">></li>
+            </ol>
+            <!-- Comeback later to make the top two arrows selectable links. -->
           </div>
         </section>
 
-        <section class="upc-Schedule-Geneds">
-          <h4 class="">Course Registration Completion:</h4>
-          <div class="">60%</div>
+        <section class="">
+          <h4 class="upc-C-Seven">Course Registration Completion:</h4>
+          <div class="upc-C-Seven">50%</div>
           <div class="completion-Bar"></div>
-
-          <h4 class="">General Education</h4>
-          <div class="general-Option">
-            <div class="gen-Eds-Selection">
-              <ol>
-                <li>Computer Information Systems</li>
-                <li>English</li>
-                <li>History</li>
-                <li>Mathematics</li>
-                <li>Physical Education and Health</li>
-                <li>Science</li>
-                <li>Social Sciences</li>
-              </ol>
-            </div>
-            <div class="arrows-On-The-Rye">
-              <ol>
-                <li>></li>
-                <li>></li>
-                <li>></li>
-                <li>></li>
-                <li>></li>
-                <li>></li>
-                <li>></li>
-              </ol>
-              <!-- Comeback later to make the top two arrows selectable links. -->
-            </div>
-          </section>
-
-          <section class="">
-            <h4 class="">Course Registration Completion:</h4>
-            <div class="">50%</div>
-            <div class="completion-Bar"></div>
-            <h4 class="">Core Program Courses:</h4>
-            <!-- Use of Possible input tag here. Come back for later review -->
-            <div class="selectable-One">
-              <h4 class="">CSET 155</h4>
-              <h3 class="">Database Design</h3>
-            </div>
-
-            <div class="selectable-Two">
-              <h4 class="">CSET 160</h4>
-              <h3 class="">Web Development II</h3>
-            </div>
-
-            <div class="selectable-Three">
-              <h4 class="">CSET 170</h4>
-              <h3 class="">Security &amp; Proffesional Ethics</h3>
-            </div>
-
-            <div class="get-Help-Button">
-              <p>Get Help »</p>
-            </div>
-          </section>
-
-          <section class="">
-            <h4 class="">Course Registration Completion:</h4>
-            <div class="">60%</div>
-            <div class="completion-Bar"></div>
-            <h4 class="">General Education</h4>
-            <!-- Use of Possible input tag here. Come back for later review -->
-            <h4 class="">Computer Information Systems</h4>
-            <div class="line"></div>
-            <div class="option-One">
-              <h4 class="">CIS 105</h4>
-              <h3 class="">Drawing with AutoCAD</h3>
-            </div>
-
-            <div class="option-Two">
-              <h4 class="">CIS 111</h4>
-              <h3 class="">Introduction to Computer Applications</h3>
-            </div>
-
-            <div class="option-Three">
-              <h4 class="">CIS 211</h4>
-              <h3 class="">Microsoft Excel</h3>
-            </div>
-
-          </section>
-
-          <section class="">
-            <h4 class="">Course Registration Completion:</h4>
-            <div class="">60%</div>
-            <div class="completion-Bar"></div>
-            <h4 class="">General Education</h4>
-            <!-- Use of Possible input tag here. Come back for later review -->
-            <h4 class="">English</h4>
-            <div class="line"></div>
-            <div class="option-One">
-              <h4 class="">ENG 106</h4>
-              <h3 class="">English Composition</h3>
-            </div>
-
-            <div class="option-Two">
-              <h4 class="">ENG 116</h4>
-              <h3 class="">Short Story and Poetry</h3>
-            </div>
-
-            <div class="option-Three">
-              <h4 class="">ENG 216</h4>
-              <h3 class="">Technical Report Writing</h3>
-            </div>
-
-            <div class="option-Four">
-              <h4 class="">ENG 221</h4>
-              <h3 class="">Public Speaking</h3>
-            </div>
-
-            <div class="option-Five">
-              <h4 class="">ENG 225</h4>
-              <h3 class="">Short Contemporary Novel</h3>
-            </div>
-
-          </div>
-          <!-- Another button tag may be used here. Return later to make a button and mate with a script if needed. -->
-          <div class="register-Button">
-            <p>REGISTER »</p>
+          <h4 class="upc-Bl-14">Core Program Courses:</h4>
+          <!-- Use of Possible input tag here. Come back for later review -->
+          <div class="selectable-One">
+            <h4 class="content-Title-Text">CSET 155</h4>
+            <h3 class="content-Subtitle-Text">Database Design</h3>
           </div>
 
+          <div class="selectable-Two">
+            <h4 class="content-Title-Text">CSET 160</h4>
+            <h3 class="content-Subtitle-Text">Web Development II</h3>
+          </div>
+
+          <div class="selectable-Three">
+            <h4 class="content-Title-Text">CSET 170</h4>
+            <h3 class="content-Subtitle-Text">Security &amp; Proffesional Ethics</h3>
+          </div>
+
+          <div class="selectable-Three">
+            <h4 class="content-Title-Text">CSET 180</h4>
+            <h3 class="content-Subtitle-Text">Software Project II</h3>
+          </div>
+
+          <div class="get-Help-Button">
+            <p class="get-Help-teal">Get Help »</p>
+          </div>
+        </section>
+
+        <section class="computer-Information-Systems">
+          <h4 class="upc-C-Seven">Course Registration Completion:</h4>
+          <div class="upc-C-Seven">60%</div>
+          <div class="completion-Bar"></div>
+          <h4 class="upc-Bl-14">General Education</h4>
+          <!-- Use of Possible input tag here. Come back for later review -->
+          <h4 class="upc-Course-List">Computer Information Systems</h4>
+          <div class="line"></div>
+          <div class="option-One">
+            <h4 class="content-Title-Text">CIS 105</h4>
+            <h3 class="content-Subtitle-Text">Drawing with AutoCAD</h3>
+          </div>
+
+          <div class="option-Two">
+            <h4 class="content-Title-Text">CIS 111</h4>
+            <h3 class="content-Subtitle-Text">Introduction to Computer Applications</h3>
+          </div>
+
+          <div class="option-Three">
+            <h4 class="content-Title-Text">CIS 211</h4>
+            <h3 class="content-Subtitle-Text">Microsoft Excel</h3>
+          </div>
+
+        </section>
+
+        <section class="english">
+          <h4 class="upc-C-Seven">Course Registration Completion:</h4>
+          <div class="upc-C-Seven">60%</div>
+          <div class="completion-Bar"></div>
+          <h4 class="upc-Bl-14">General Education</h4>
+          <!-- Use of Possible input tag here. Come back for later review -->
+          <h4 class="upc-Course-List">English</h4>
+          <div class="line"></div>
+          <div class="option-One">
+            <h4 class="content-Title-Text">ENG 106</h4>
+            <h3 class="content-Subtitle-Text">English Composition</h3>
+          </div>
+
+          <div class="option-Two">
+            <h4 class="content-Title-Text">ENG 116</h4>
+            <h3 class="content-Subtitle-Text">Short Story and Poetry</h3>
+          </div>
+
+          <div class="option-Three">
+            <h4 class="content-Title-Text">ENG 216</h4>
+            <h3 class="content-Subtitle-Text">Technical Report Writing</h3>
+          </div>
+
+          <div class="option-Four">
+            <h4 class="content-Title-Text">ENG 221</h4>
+            <h3 class="content-Subtitle-Text">Public Speaking</h3>
+          </div>
+
+          <div class="option-Five">
+            <h4 class="content-Title-Text">ENG 225</h4>
+            <h3 class="content-Subtitle-Text">Short Contemporary Novel</h3>
+          </div>
+
+        </div>
+        <!-- Another button tag may be used here. Return later to make a button and mate with a script if needed. -->
+        <div class="register-Button">
+          <p class="white-Twelve">REGISTER »</p>
+        </div>
+
+        <div class="next-Button">
+          <p class="white-Twelve">NEXT »</p>
+        </div>
+      </section>
+
+      <section class="pop-Up-1">
+        <div class="popup-Outline">
+          <h4 class="">Course Registration Help</h4>
+          <ul>
+            <li>I'd like to change majors</li>
+            <li>My major courses are unavailable</li>
+            <li>Other issue.</li>
+          </ul>
           <div class="next-Button">
-            <p>NEXT »</p>
+            <p>NEXT</p>
+          </div>
+        </div>
+      </section>
+
+      <section class="pop-Up-2a">
+        <div class="popup-Outline">
+          <h4 class="">Course Registration Help</h4>
+          <h4 class="">Current Program:</h4>
+          <h4 class="">Computer Software Engineering Technology</h4>
+          <h5 class="">New Program</h5>
+          <div class="dropdown-Menu-Class-Selection"></div>
+          <div class="submit-Button">
+            <p>SUBMIT</p>
+          </div>
+        </div>
+      </section>
+
+      <section class="pop-Up-2b">
+        <div class="popup-Outline">
+          <h4 class="">Course Registration Help</h4>
+          <h4 class="">Error: Major Courses Unavailable.</h4>
+          <p>Your response has been recorded. Support will be in touch via email.</p>
+          <div class="okay-Button">
+            <p>OKAY</p>
           </div>
         </section>
 
-        <section class="pop-Up-1">
+        <section class="pop-Up-2d">
           <div class="popup-Outline">
             <h4 class="">Course Registration Help</h4>
-            <ul>
-              <li>I'd like to change majors</li>
-              <li>My major courses are unavailable</li>
-              <li>Other issue.</li>
-            </ul>
-            <div class="next-Button">
-              <p>NEXT</p>
+            <h4 class="">Error: Other Issue</h4>
+            <p>Thank you! Your message has been submitted &amp; we will be in touch shortly.</p>
+            <div class="thanks-Button">
+              <p>THANKS!</p>
             </div>
           </div>
         </section>
 
-        <section class="pop-Up-2a">
+        <section class="pop-Up-2c">
           <div class="popup-Outline">
             <h4 class="">Course Registration Help</h4>
-            <h4 class="">Current Program:</h4>
-            <h4 class="">Computer Software Engineering Technology</h4>
-            <h5 class="">New Program</h5>
-            <div class="dropdown-Menu-Class-Selection"></div>
+            <h4 class="">Error: Other Issue</h4>
+            <p>Please briefly describe the issue you are having:</p>
             <div class="submit-Button">
               <p>SUBMIT</p>
             </div>
-          </div>
-        </section>
-
-        <section class="pop-Up-2b">
-          <div class="popup-Outline">
-            <h4 class="">Course Registration Help</h4>
-            <h4 class="">Error: Major Courses Unavailable.</h4>
-            <p>Your response has been recorded. Support will be in touch via email.</p>
-            <div class="okay-Button">
-              <p>OKAY</p>
-            </div>
           </section>
 
-          <section class="pop-Up-2d">
-            <div class="popup-Outline">
-              <h4 class="">Course Registration Help</h4>
-              <h4 class="">Error: Other Issue</h4>
-              <p>Thank you! Your message has been submitted &amp; we will be in touch shortly.</p>
-              <div class="thanks-Button">
-                <p>THANKS!</p>
-              </div>
-            </div>
-          </section>
-
-          <section class="pop-Up-2c">
-            <div class="popup-Outline">
-              <h4 class="">Course Registration Help</h4>
-              <h4 class="">Error: Other Issue</h4>
-              <p>Please briefly describe the issue you are having:</p>
-              <div class="submit-Button">
-                <p>SUBMIT</p>
-              </div>
-            </section>
-
-            <script src="javascript/counter.js" type="text/javascript"></script>
-          </body>
-          </html>
+          <script src="javascript/counter.js" type="text/javascript"></script>
+        </body>
+        </html>
