Finished out the classnames in the get help section of upcoming courses.

--- a/pages/upcomingcourses.html
+++ b/pages/upcomingcourses.html
@@ -207,59 +207,59 @@
 
       <section class="pop-Up-1">
         <div class="popup-Outline">
-          <h4 class="">Course Registration Help</h4>
+          <h4 class="upc-C-Seven">Course Registration Help</h4>
           <ul>
-            <li>I'd like to change majors</li>
-            <li>My major courses are unavailable</li>
-            <li>Other issue.</li>
+            <li class="upc-Bl-14">I'd like to change majors</li>
+            <li class="upc-Bl-14">My major courses are unavailable</li>
+            <li class="upc-Bl-14">Other issue.</li>
           </ul>
           <div class="next-Button">
-            <p>NEXT</p>
+            <p class="white-Twelve">NEXT</p>
           </div>
         </div>
       </section>
 
       <section class="pop-Up-2a">
         <div class="popup-Outline">
-          <h4 class="">Course Registration Help</h4>
-          <h4 class="">Current Program:</h4>
-          <h4 class="">Computer Software Engineering Technology</h4>
-          <h5 class="">New Program</h5>
+          <h4 class="upc-C-Seven">Course Registration Help</h4>
+          <h4 class="content-Title-Text">Current Program:</h4>
+          <h4 class="upc-Bl-14">Computer Software Engineering Technology</h4>
+          <h5 class="content-Title-Text">New Program</h5>
           <div class="dropdown-Menu-Class-Selection"></div>
           <div class="submit-Button">
-            <p>SUBMIT</p>
+            <p class="white-Twelve">SUBMIT</p>
           </div>
         </div>
       </section>
 
       <section class="pop-Up-2b">
         <div class="popup-Outline">
-          <h4 class="">Course Registration Help</h4>
-          <h4 class="">Error: Major Courses Unavailable.</h4>
-          <p>Your response has been recorded. Support will be in touch via email.</p>
+          <h4 class="upc-C-Seven">Course Registration Help</h4>
+          <h4 class="upc-Bl-14">Error: Major Courses Unavailable.</h4>
+          <p class="upc-Bl-13">Your response has been recorded. Support will be in touch via email.</p>
           <div class="okay-Button">
-            <p>OKAY</p>
+            <p class="white-Twelve">OKAY</p>
           </div>
         </section>
 
         <section class="pop-Up-2d">
           <div class="popup-Outline">
-            <h4 class="">Course Registration Help</h4>
-            <h4 class="">Error: Other Issue</h4>
-            <p>Thank you! Your message has been submitted &amp; we will be in touch shortly.</p>
+            <h4 class="upc-C-Seven">Course Registration Help</h4>
+            <h4 class="upc-Bl-14">Error: Other Issue</h4>
+            <p class="upc-Bl-13">Thank you! Your message has been submitted &amp; we will be in touch shortly.</p>
             <div class="thanks-Button">
-              <p>THANKS!</p>
+              <p class="white-Twelve">THANKS!</p>
             </div>
           </div>
         </section>
 
         <section class="pop-Up-2c">
           <div class="popup-Outline">
-            <h4 class="">Course Registration Help</h4>
-            <h4 class="">Error: Other Issue</h4>
-            <p>Please briefly describe the issue you are having:</p>
+            <h4 class="upc-C-Seven">Course Registration Help</h4>
+            <h4 class="upc-Bl-14">Error: Other Issue</h4>
+            <p class="upc-Bl-13">Please briefly describe the issue you are having:</p>
             <div class="submit-Button">
-              <p>SUBMIT</p>
+              <p class="white-Twelve">SUBMIT</p>
             </div>
           </section>
 
