Created a fonts scss folder and created all the custom font colors for the index.html.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Home</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400,700" rel="stylesheet">
 </head>
 <body>
   <!-- a section is going to be used to give the white background around the bodies background-->
@@ -17,7 +18,7 @@
     <!-- The empty h4 is for the current date through javascript.-->
     <ul class="date-Log-Out">
     <li class="header-Date-Text">Date</li>
-    <li class="header-Date-Text">Log Out?</li>
+    <li class="header-Log-Out-Text">Log Out?</li>
     </ul>
     <!-- a div class will be used to create a rectangle line to seperate the content of each section-->
     <div class="page-Breaks"></div>
